# merge-god

./: .gitignore  .justfile.md  .markdownlintignore  .markdownlintrc  .merge-rules.yaml  .mypy-ignore-temp.txt  .pre-commit-config.yaml  ADR.md  AGENTS.md  AGENT_TESTING.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  LICENSE  MANIFEST.in  PRD.md  PROMPT_EXAMPLE.md  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  UV_SUPPORT.md  agent_gate_summary_model.ts  analyze_duplicates.ts  app_store.ts  changed_file_model.ts  ci_status_model.ts  collection_access_model.ts  command_runner.ts  commandments.yaml  comment_access_model.ts  comment_visibility_model.ts  commit_access_model.ts  config.example.yaml  config.merge-god-self-test.example.yaml  config.yaml  conflict_file_access_model.ts  conflict_model.ts  coordination.ts  dashboard.py  (+102 more)
.github/workflows/: docs.yml  lint.yml  site.yml  test.yml  validate.yml
.hermit/reviews/: 20260629T200803Z-prd-001-automated-pr-processing-loop.json  20260629T201214344234000Z-prd-001-automated-pr-processing-loop.json  20260630T151011054846000Z-prd-001-automated-pr-processing-loop.json
agents/: __init__.py  __init__.ts  callbacks.py  callbacks.ts  claude_agent.py  claude_agent.ts
archive/: CODE_REVIEW.md  FIXES_APPLIED.md
docs/: ARCHITECTURE_SECURITY.md  CODE_REVIEW.md  FIXES_APPLIED.md  README.md  REVIEW_SUMMARY.md  agent-testing.md  architecture.md  configuration.md  contributing.md  development.md  how-it-works.md  installation.md  introduction.md  merge-queues.md  pi-provider-setup.md  prompt-example.md  quickstart.md  scenarios.md  testing.md  usage.md  uv-guide.md
docs-cms/: README.md  docs-project.yaml
docs-cms/adr/: adr-001-use-python-with-uv-for-script-execution.md  adr-002-use-github-cli-gh-for-pr-operations.md  adr-003-structured-json-logging.md  adr-004-label-based-processing-control.md  adr-005-use-bob-ai-assistant-wrapper-for-pr-processing.md  adr-005-use-pi-coding-agent-for-pr-processing.md  adr-006-real-time-notifications-via-ntfy-sh.md  adr-007-command-line-review-flag-deprecated.md  adr-008-single-repository-target.md  adr-009-5-minute-processing-loop.md  adr-010-tui-dashboard-with-rich-library.md  adr-011-yaml-configuration-for-multi-repo.md  adr-012-automatic-doormat-credential-loading.md  adr-013-github-pr-state-label-schema.md  adr-014-pr-loop-functional-core.md
docs-cms/memos/: memo-001-ironhide-comparison.md  memo-002-metro-workflow-spec-reference.md  memo-003-merge-labels-and-embark-capture.md  memo-004-pr-comment-capture-contract.md  memo-005-suggested-package-list.md
docs-cms/prd/: prd-001-automated-pr-processing-loop.md  prd-002-comprehensive-pr-context-gathering.md  prd-003-security-and-resilience.md  prd-004-label-based-processing-control.md  prd-005-real-time-notifications.md  prd-006-testing-and-documentation.md  prd-007-tui-dashboard-with-multi-repo-support.md  prd-008-interactive-bootstrap-wizard.md  prd-009-merge-automation.md  prd-010-metrics-and-analytics.md  prd-011-web-dashboard.md  prd-012-templated-prompts.md
docs-cms/rfcs/: rfc-001-workflow-ir-extraction.md  rfc-002-workflow-helper-tool-surface.md  rfc-003-prompt-fragment-contracts.md  rfc-004-pr-triage-and-merge-planning-workflow.md  rfc-005-advanced-pr-salvage-and-embark-planning.md  rfc-006-live-trajectory-context-pipeline.md  rfc-007-profile-guided-operations-acceleration.md  rfc-999-hermit-review-label-canary.md
docs-cms/templates/: adr-000-template.md  memo-000-template.md  prd-000-template.md  rfc-000-template.md
docs/metro-spec/: PROMPT-SPEC.md  README.md  WORKFLOW-IR-CHANGE-LEDGER.md  WORKFLOW-IR-GUIDE.md  WORKFLOW-IR-SPEC.md  WORKFLOW-SPEC.md  prompt-runtime-registry.yaml  workflow-QUICK-REF.md  workflow-README.md  (+2 more)
github_sync/: HOWTO.md  LLM_INTEGRATION.md  MCP_README.md  README.md  __init__.py  __main__.py  actions.py  bot.py  cli.py  commands.py  examples.py  export.py  git_client.py  github_client.py  mcp_server.py  models.py  project_manager.py  pyproject.toml  sync_engine.py  sync_store.py  workflow.py
github_sync/tests/: __init__.py  conftest.py  test_actions.py  test_command_queue.py  test_e2e.py  test_export.py  test_git_integration.py  test_gitea_integration.py  test_github_client.py  test_mcp_file.py  test_mcp_git.py  test_mcp_protocol.py  test_mcp_server.py  test_mcp_sync.py  test_mcp_workflow.py  test_models.py  test_project_manager.py  test_sync_engine.py  test_sync_store.py  test_workflow.py
merge_god/: __init__.py  cli.py  cli.ts  coordination.ts  dashboard.py  db_operations.py  git_ops.py  github_ops.py  models.py  pr_loop.py  run_agent.py  run_agent.ts  send_approval.py  send_approval.ts  state_tracker.py  sync.py  sync.ts  trajectory_runtime.ts  types.py  validate.py  validate.ts
pi/: README.md  agent_interactions.ts  package.json  tool_contract.ts
schemas/: config.ts  coordination.ts
scripts/: test-package-install.mjs
site/: README.md  astro.config.mjs  package-lock.json  package.json
tests/: agent_flow.test.ts  agent_gate_summary_model.test.ts  changed_file_model.test.ts  ci_status_model.test.ts  cli_bootstrap.test.ts  collection_access_model.test.ts  comment_access_model.test.ts  comment_visibility_model.test.ts  commit_access_model.test.ts  conflict_file_access_model.test.ts  conflict_model.test.ts  conftest.py  create_test_pr_134.py  dashboard_event_model.test.ts  diff_availability_model.test.ts  duplicate_pr_model.test.ts  embark_recovery_model.test.ts  evidence_comment.test.ts  evidence_ref_access_model.test.ts  evidence_ref_model.test.ts  execution_policy.test.ts  fixes.test.ts  follow_up_pr_model.test.ts  imports.test.ts  label_gate_model.test.ts  link_url_model.test.ts  manual_gate_model.test.ts  markdown_table_model.test.ts  merge_blocker_model.test.ts  merge_pr_model.test.ts  merge_rules.test.ts  merge_state_model.test.ts  operations_profile_model.test.ts  orchestration_completion.test.ts  pi_agent_harness.test.ts  pi_agent_interactions.test.ts  pi_agent_progress.test.ts  pr_agent_context_model.test.ts  pr_cli_model.test.ts  pr_context_access_model.test.ts  (+54 more)
(+37 files in other folders)
