[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merge-god"
version = "0.1.0"
description = "Automated PR processing and merging system using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "merge-god contributors"}
]
keywords = [
    "github",
    "pull-request",
    "automation",
    "ai",
    "claude",
    "code-review",
    "merge-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "anthropic[bedrock]>=0.39.0",
    "PyGithub>=2.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
merge-god = "merge_god.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/merge-god"
Documentation = "https://github.com/yourusername/merge-god#readme"
Repository = "https://github.com/yourusername/merge-god"
Issues = "https://github.com/yourusername/merge-god/issues"

[tool.hatch.build.targets.wheel]
packages = ["merge_god"]

[tool.hatch.build.targets.sdist]
include = [
    "/merge_god",
    "/README.md",
    "/LICENSE",
    "/config.example.yaml",
    "/pyproject.toml",
]
exclude = [
    "/.git",
    "/__pycache__",
    "/*.db",
    "/*.db-*",
    "/dashboard_captures",
    "/*.pyc",
    "/test_*.py",
    "/create_test_*.py",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S101",    # use of assert (ok in tests)
    "T20",     # print statements (ok for CLI tools)
    "S603",    # subprocess without shell=True
    "S607",    # starting process with partial path
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ARG001", "PLR2004"]
"agents/**/*.py" = ["T20"]  # Allow prints in agent callbacks

[tool.ruff.lint.isort]
known-first-party = ["merge_god"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, gradually increase
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
files = ["merge_god/**/*.py"]
exclude = [
    "^(agents|tests|dashboard\\.py|db_operations\\.py|git_ops\\.py|github_ops\\.py|models\\.py|pr-loop\\.py|state_tracker\\.py|sync_pr_context\\.py)/",
]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "github.*",
    "psutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
