[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merge-god"
version = "0.1.0"
description = "Automated PR processing and merging system using Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "merge-god contributors"}
]
keywords = [
    "github",
    "pull-request",
    "automation",
    "ai",
    "claude",
    "code-review",
    "merge-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]

# Production dependencies - required for runtime
dependencies = [
    "anthropic[bedrock]>=0.39.0",  # Claude Agent SDK with Bedrock support
    "PyGithub>=2.1.0",              # GitHub API client
    "rich>=13.0.0",                 # Terminal UI and formatting
    "pyyaml>=6.0",                  # Configuration file parsing
    "psutil>=5.9.0",                # Process and system monitoring
]

[project.optional-dependencies]
# Complete development environment (includes all dev groups)
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Linting and formatting
    "ruff>=0.1.15",
    "isort>=5.13.0",
    "black>=24.0.0",

    # Type checking
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",

    # Security scanning
    "bandit[toml]>=1.7.6",
    "pip-audit>=2.6.0",

    # Pre-commit and hooks
    "pre-commit>=3.6.0",

    # Build and publishing
    "build>=1.0.0",
    "twine>=4.0.0",
]

# Testing dependencies only
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

# Linting and code quality
lint = [
    "ruff>=0.1.15",
    "isort>=5.13.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "bandit[toml]>=1.7.6",
    "pip-audit>=2.6.0",
]

# Build and publish tools
build = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "hatchling>=1.21.0",
]

[project.scripts]
merge-god = "merge_god.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/merge-god"
Documentation = "https://github.com/yourusername/merge-god#readme"
Repository = "https://github.com/yourusername/merge-god"
Issues = "https://github.com/yourusername/merge-god/issues"

[tool.hatch.build.targets.wheel]
packages = ["merge_god"]

[tool.hatch.build.targets.sdist]
include = [
    "/merge_god",
    "/README.md",
    "/LICENSE",
    "/config.example.yaml",
    "/pyproject.toml",
]
exclude = [
    "/.git",
    "/__pycache__",
    "/*.db",
    "/*.db-*",
    "/dashboard_captures",
    "/*.pyc",
    "/test_*.py",
    "/create_test_*.py",
]

# === uv Configuration ===

[tool.uv]
# uv-specific development dependencies (used by 'uv sync')
dev-dependencies = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Linting and formatting
    "ruff>=0.1.15",
    "isort>=5.13.0",
    "black>=24.0.0",

    # Type checking
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",

    # Security scanning
    "bandit[toml]>=1.7.6",
    "pip-audit>=2.6.0",

    # Pre-commit and hooks
    "pre-commit>=3.6.0",

    # Build and publishing
    "build>=1.0.0",
    "twine>=4.0.0",
]

# === Ruff Configuration ===

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "YTT",  # flake8-2020
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "B904",    # raise from
    "C901",    # too complex
    "COM812",  # trailing comma (conflicts with formatter)
    "ISC001",  # implicit string concatenation (conflicts with formatter)
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic value in comparison
    "PLW0603", # global statement
    "S101",    # use of assert (ok in tests)
    "S102",    # use of exec (needed in test scripts)
    "S110",    # try-except-pass
    "S112",    # try-except-continue
    "S310",    # audit URL open (false positives)
    "T20",     # print statements (ok for CLI tools)
    "S603",    # subprocess without shell=True
    "S607",    # starting process with partial path
    "S608",    # SQL injection (false positives with parameterized queries)
    "PLC0415", # import outside top-level (sometimes necessary)
    "SIM102",  # nested if statements
    "SIM105",  # use contextlib.suppress
    "SIM115",  # use context manager for opening files
    "PTH123",  # use Path.open()
    "E722",    # bare except (sometimes intentional)
    "ERA001",  # commented-out code
    "RUF001",  # ambiguous unicode character
    "F821",    # undefined name (false positives with exec)
    "F401",    # imported but unused
    "N806",    # variable in function should be lowercase
    "ARG001",  # unused function argument
    "ARG005",  # unused lambda argument
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ARG001", "PLR2004"]
"agents/**/*.py" = ["T20"]  # Allow prints in agent callbacks

[tool.ruff.lint.isort]
known-first-party = ["merge_god"]

# === mypy Configuration ===

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
no_implicit_optional = false
strict_optional = false
ignore_missing_imports = true
disable_error_code = ["no-any-return", "union-attr", "arg-type", "return-value", "attr-defined", "var-annotated", "misc", "assignment"]
files = ["merge_god/**/*.py"]
exclude = [
    "^(agents|tests|dashboard\\.py|db_operations\\.py|git_ops\\.py|github_ops\\.py|models\\.py|pr-loop\\.py|state_tracker\\.py|sync_pr_context\\.py|send_approval\\.py|run_agent_from_db\\.py|test-prompt\\.py)/",
]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "github.*",
    "psutil.*",
]
ignore_missing_imports = true

# === pytest Configuration ===

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# === Bandit Configuration ===

[tool.bandit]
exclude_dirs = ["tests", "test_*.py", ".venv"]
skips = [
    "B101",  # assert_used - ok in tests
    "B102",  # exec_used - needed in test scripts
    "B110",  # try_except_pass - sometimes intentional
    "B112",  # try_except_continue - sometimes intentional
    "B310",  # urllib_urlopen - we use it safely
    "B404",  # subprocess import - necessary for git/gh commands
    "B603",  # subprocess_without_shell_equals_true
    "B607",  # start_process_with_partial_path
    "B608",  # hardcoded_sql_expressions - we use parameterized queries
]
