[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-sync"
version = "0.1.0"
description = "Async Python library for syncing GitHub repository data to SQLite"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "github-sync contributors" }]
keywords = [
    "github",
    "git",
    "sync",
    "sqlite",
    "async",
    "pull-request",
    "branches",
    "ci",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

# Runtime dependencies
dependencies = [
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
# Full development environment
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "twine>=6.0.0",
]

# Testing only
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.0",
]

# Linting and formatting only
lint = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# Documentation
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/github-sync"
Documentation = "https://github.com/yourusername/github-sync#readme"
Repository = "https://github.com/yourusername/github-sync"
Issues = "https://github.com/yourusername/github-sync/issues"
Changelog = "https://github.com/yourusername/github-sync/blob/main/CHANGELOG.md"

# =============================================================================
# Build Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["github_sync"]
exclude = ["github_sync/tests", "github_sync/examples.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/github_sync",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/.git",
    "/__pycache__",
    "/*.db",
    "/*.db-*",
    "/.pytest_cache",
    "/.mypy_cache",
    "/.ruff_cache",
    "/htmlcov",
    "/.coverage",
    "/github_sync/tests",
    "/github_sync/examples.py",
]

# =============================================================================
# uv Configuration
# =============================================================================

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
    "twine>=6.0.0",
]

# =============================================================================
# Ruff Configuration (Linting + Formatting)
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["github_sync"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "TRY",    # tryceratops
    "PERF",   # perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "COM812",   # trailing comma (conflicts with formatter)
    "ISC001",   # implicit string concatenation (conflicts with formatter)
    "PLR0913",  # too many arguments
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR0911",  # too many return statements
    "PLR2004",  # magic value in comparison
    "S101",     # use of assert (ok in tests)
    "S603",     # subprocess security (controlled git commands)
    "S607",     # partial executable path (git/gh commands)
    "S608",     # SQL injection (false positives with parameterized queries)
    "TRY003",   # long exception messages
    "TRY400",   # logging.exception in except
    "ARG001",   # unused function argument (common in interfaces)
    "ARG002",   # unused method argument
    "A001",     # variable shadowing builtin (format is common)
    "A002",     # function argument shadowing builtin (format is common)
    "UP007",    # Use X | Y instead of Union[X, Y] (some valid cases)
    "RUF022",   # __all__ not sorted (prefer logical grouping)
    "SIM105",   # contextlib.suppress vs try-except-pass (explicit is fine)
    "S110",     # try-except-pass detected (intentional in hooks)
    "PTH123",   # open() vs Path.open() (standard pattern)
    "ASYNC230", # async with blocking file open (acceptable for small files)
    "ASYNC210", # async with blocking HTTP (in tests only)
    "ASYNC109", # async function with timeout (common pattern)
    "RET504",   # unnecessary assignment before return (clearer code)
    "PERF401",  # async list comprehension (readability preferred)
    "E731",     # lambda expressions (clear in context)
    "SIM115",   # context manager for opening files (false positive)
    "PLW2901",  # loop variable overwritten (intentional strip)
    "TRY300",   # move return to else block (clearer as-is)
    "B904",     # raise from err (verbose for simple cases)
    "FURB162",  # timezone replacement (compatibility with older Python)
    "N806",     # constant naming in function (MAX_* constants)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert allowed in tests
    "ARG001",   # unused arguments in test fixtures
    "ARG002",   # unused method arguments
    "PLR2004",  # magic values in tests
    "S105",     # hardcoded passwords in tests
    "S106",     # hardcoded passwords in tests
    "N806",     # variable in function should be lowercase (MockGitHub is fine)
    "F841",     # unused variable (sometimes intentional in tests)
    "RUF001",   # ambiguous unicode (intentional in unicode tests)
    "PLC0415",  # imports inside functions (for test isolation)
    "S603",     # subprocess security (controlled test environment)
    "S607",     # partial executable path (git commands in tests)
    "B017",     # broad exception assertion (intentional for error tests)
    "PT011",    # broad pytest.raises (acceptable in tests)
    "RUF059",   # unpacked variable never used (intentional unpacking)
    "E741",     # ambiguous variable name (l in list comprehensions is clear)
]
"github_sync/tests/**/*.py" = [
    "S101",
    "ARG001",
    "ARG002",
    "PLR2004",
    "S105",
    "S106",
    "N806",
    "F841",
    "RUF001",
    "PLC0415",
    "S603",
    "S607",
    "B017",
    "PT011",
    "RUF059",
    "E741",
]
"conftest.py" = ["ARG001", "ARG002", "S603", "S607"]
"**/conftest.py" = ["ARG001", "ARG002", "S603", "S607"]
"examples.py" = ["PLC0415"]
"actions.py" = ["E402"]  # circular import workaround
"github_sync/actions.py" = ["E402"]
"project_manager.py" = ["ASYNC221", "E741"]  # run_in_executor with subprocess is intentional
"github_sync/project_manager.py" = ["ASYNC221", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["github_sync"]
force-single-line = false
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "tuple"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 8
max-statements = 60

# =============================================================================
# mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
files = ["github_sync"]
exclude = ["github_sync/tests", "github_sync/examples.py"]

[[tool.mypy.overrides]]
module = ["aiosqlite.*", "httpx.*", "testcontainers.*"]
ignore_missing_imports = true

# =============================================================================
# pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["github_sync/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "ignore::DeprecationWarning:aiosqlite.*:",
    "ignore::DeprecationWarning:testcontainers.*:",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["github_sync"]
branch = true
omit = [
    "github_sync/tests/*",
    "github_sync/examples.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
